routes/f5-demo-app-route-secure.yaml
---

  apiVersion: v1
  kind: Route
  metadata:
    labels:
      name: f5-demo-app-route
    name: f5-route-3
    namespace: myproject
    annotations:
      virtual-server.f5.com/clientssl: /Common/clientssl
  spec:
    host: mysite.f5demo.com
    port:
      targetPort: 8080
    tls:
      termination: passthrough
      insecureEdgeTerminationPolicy: Redirect
    to:
      kind: Service
      name: f5-demo-app-route

---

  apiVersion: v1
  kind: Route
  metadata:
    labels:
      name: f5-demo-app-route
    name: f5-route-4
    namespace: myproject
    annotations:
      virtual-server.f5.com/balance: least-connections-node
      virtual-server.f5.com/clientssl: /Common/clientssl
  spec:
    host: mysite.f5demo.com
    port:
      targetPort: 8080
    tls:
      termination: passthrough
      insecureEdgeTerminationPolicy: None
    to:
      kind: Service
      name: f5-demo-app-route
---

  apiVersion: v1
  kind: Route
  metadata:
    labels:
      name: f5-demo-app-route
    name: f5-route-5
    namespace: myproject
    annotations:
      virtual-server.f5.com/health: |
        [
          {
            "path": "mysite.f5demo5.com/",
            "send": "HTTP GET /",
            "interval": 5,
            "timeout": 10
          }
        ]
  spec:
    host: mysite.f5demo.com
    port:
      targetPort: 8080
    tls:
      certificate: 
        -----BEGIN CERTIFICATE-----
	MIIDUDCCAjgCCQDgRB4UIiD+hjANBgkqhkiG9w0BAQUFADBqMQswCQYDVQQGEwJV
[...]
	tLUOkV5TAy0qJx0yWC+1VTgr56vmEP1EjQBW+KliIyh76O3Z
	-----END CERTIFICATE-----    
      key: 
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEA10QO+e/3doL6LXiNBi312/Tc1EW2pEGQvL6/SvBz47Q4r65W
[...]
	5F7tKj47UBQNz9ZDfkXw2Q2rD8u5fKdrLBVjcEQNZ4yd0g7bvqpVmA==
	-----END RSA PRIVATE KEY-----
      termination: reencrypt
    to:
      kind: Service
      name: f5-demo-app-route

---

    
  apiVersion: v1
  kind: Route
  metadata:
    labels:
      name: f5-demo-app-route
    name: f5-route-7
    namespace: myproject
    annotations:
      virtual-server.f5.com/health: |
        [
          {
            "path": "mysite.f5demo7.com/",
            "send": "HTTP GET /",
            "interval": 5,
            "timeout": 10
          }
        ]
  spec:
    host: mysite.f5demo.com
    port:
      targetPort: 8080
    tls:
      certificate: 
        -----BEGIN CERTIFICATE-----
	MIIDUDCCAjgCCQDgRB4UIiD+hjANBgkqhkiG9w0BAQUFADBqMQswCQYDVQQGEwJV
[...]
	tLUOkV5TAy0qJx0yWC+1VTgr56vmEP1EjQBW+KliIyh76O3Z
	-----END CERTIFICATE-----    
      key: 
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEA10QO+e/3doL6LXiNBi312/Tc1EW2pEGQvL6/SvBz47Q4r65W
[...]
	5F7tKj47UBQNz9ZDfkXw2Q2rD8u5fKdrLBVjcEQNZ4yd0g7bvqpVmA==
	-----END RSA PRIVATE KEY-----
      termination: reencrypt
    to:
      kind: Service
      name: f5-demo-app-route
    alternateBackends:
    - kind: Service
      name: f5-demo-app-route-4
      weight: 10          
    - kind: Service
      name: f5-demo-app-route-5
      weight: 10
---

    
  apiVersion: v1
  kind: Route
  metadata:
    labels:
      name: f5-demo-app-route
    name: f5-route-12
    namespace: myproject
    annotations:
      virtual-server.f5.com/clientssl: /Common/clientssl
      virtual-server.f5.com/health: |
        [
          {
            "path": "mysite.f5demo8.com/",
            "send": "HTTP GET /",
            "interval": 5,
            "timeout": 10
          }
        ]
  spec:
    host: mysite.f5demo.com
    port:
      targetPort: 8080
    tls:
      termination: passthrough
    to:
      kind: Service
      name: f5-demo-app-route
    alternateBackends:
    - kind: Service
      name: f5-demo-app-route-6
      weight: 10          
    - kind: Service
      name: f5-demo-app-route-7
      weight: 10
