routes/f5-demo-app-route-unsecure.yaml
  apiVersion: v1
  kind: Route
  metadata:
    labels:
      name: f5-demo-app-route
    name: f5-route-1
    namespace: myproject
    annotations:
      virtual-server.f5.com/balance: least-connections-node
      virtual-server.f5.com/whitelist-source-range: 1.2.3.4/32,2.2.2.0/24
      virtual-server.f5.com/secure-serverssl: "false"
  spec:
    host: mysite.f5demo.com
    path: "/test/demo"
    port:
      targetPort: 8080
    tls:
      termination: edge
      insecureEdgeTerminationPolicy: Allow
    to:
      kind: Service
      name: f5-demo-app-route
      weight: 100

---

  apiVersion: v1
  kind: Route
  metadata:
    labels:
      name: f5-demo-app-route
    name: f5-route-2
    namespace: myproject
    annotations:
      virtual-server.f5.com/balance: least-connections-node
      virtual-server.f5.com/secure-serverssl: "true"
  spec:
    host: mysite.f5demo.com
    path: "/test.do?action"
    port:
      targetPort: 8090
    tls:
      termination: edge
      insecureEdgeTerminationPolicy: Allow
    to:
      kind: Service
      name: f5-demo-app-route
      weight: 100
---

  apiVersion: v1
  kind: Route
  metadata:
    labels:
      name: f5-demo-app-route
    name: f5-route-6
    namespace: myproject
    annotations:
      virtual-server.f5.com/balance: least-connections-node
      virtual-server.f5.com/secure-serverssl: "true"
  spec:
    host: mysite.f5demo.com
    to:
      kind: Service
      name: f5-demo-app-route
      weight: 20          
    alternateBackends:
    - kind: Service
      name: f5-demo-app-route-2
      weight: 10          
    - kind: Service
      name: f5-demo-app-route-3
      weight: 10
