routes/multiple_paths_1.yaml
  apiVersion: v1
  kind: Route
  metadata:
    labels:
      name: f5-demo-app-route
    name: multiple-paths-1
    namespace: f5demo
  spec:
    host: mysite.f5demo.com
    path: "/aboutus"
    to:
      kind: Service
      name: f5-demo-app-route
