routes/multiple_paths_2.yaml
  apiVersion: v1
  kind: Route
  metadata:
    labels:
      name: f5-demo-app-route
    name: multiple-paths-2
    namespace: f5demo
  spec:
    host: mysite.f5demo.com
    path: "/contactus"
    to:
      kind: Service
      name: f5-demo-app-route-2
