routes/route-1.yaml
  apiVersion: v1
  kind: Route
  metadata:
    labels:
      name: f5-demo-app-route
    name: route-1
    namespace: f5demo
  spec:
    host: mysite.f5demo.com
    path: "/home"
    to:
      kind: Service
      name: f5-demo-service
      weight: 100
