routes/route-11.yaml
  apiVersion: v1
  kind: Route
  metadata:
    labels:
      name: f5-demo-app-route
    name: route-11
    namespace: myproject
  spec:
    host: mysite.f5demo.com
    path: "/test/demo"
    to:
      kind: Service
      name: f5-demo-service
      weight: 100
