routes/route-12.yaml
  apiVersion: v1
  kind: Route
  metadata:
    labels:
      name: f5-demo-app-route
    name: route-1
    namespace: myproject
    annotations:
      virtual-server.f5.com/balance: least-connections-node
  spec:
    host: mysite.f5demo.com
    path: "/test/demo"
    port:
      targetPort: 8080
    tls:
      termination: edge
      insecureEdgeTerminationPolicy: Allow
    to:
      kind: Service
      name: f5-demo-service
      weight: 100
