routes/route-3.yaml
  apiVersion: v1
  kind: Route
  metadata:
    labels:
      name: f5-demo-app-route
    name: route-3
    namespace: myproject
    annotations:
      virtual-server.f5.com/balance: round-robin
      virtual-server.f5.com/clientssl: /Common/client-ssl
      virtual-server.f5.com/serverssl: /Common/server-ssl
      virtual-server.f5.com/secure-serverssl: "true"
  spec:
    host: mysite.f5demo.com
    # from https://clouddocs.f5.com/containers/v2/openshift/kctlr-openshift-routes.html
    # IMP: The BIG-IP Controller does not support path-based Routes for TLS re-encryption.
    #path: "/index.html"
    port:
      targetPort: 8080
    tls:
      termination: reencrypt
    to:
      kind: Service
      name: f5-demo-service
      weight: 100
