routes/route-4.yaml
  apiVersion: v1
  kind: Route
  metadata:
    labels:
      name: f5-demo-app-route
    name: f5-route-4
    namespace: myproject
    annotations:
      virtual-server.f5.com/balance: least-connections-node
      virtual-server.f5.com/whitelist-source-range: 1.2.3.4/32,2.2.2.0/24
      virtual-server.f5.com/secure-serverssl: "false"
  spec:
    host: mysite.f5demo.com
    path: "/test/demo"
    port:
      targetPort: 8080
    tls:
      termination: edge
      insecureEdgeTerminationPolicy: Allow
    to:
      kind: Service
      name: f5-demo-app-route
      weight: 100
