routes/route-5.yaml
  apiVersion: v1
  kind: Route
  metadata:
    labels:
      name: f5-demo-app-route
    name: alternate-backend-route
    namespace: f5demo
  spec:
    host: mysite.f5demo.com
    to:
      kind: Service
      name: f5-demo-app-service-1
      weight: 20
    alternateBackends:
    - kind: Service
      name: f5-demo-app-service-2
      weight: 10
    - kind: Service
      name: f5-demo-app-service-3
      weight: 10
