routes/route-6.yaml
  apiVersion: v1
  kind: Route
  metadata:
    labels:
      name: f5-demo-app-route
    name: route-6
    namespace: f5demo
  spec:
    host: mysite.f5demo.com
    to:
      kind: Service
      name: f5-demo-app-route
    alternateBackends:
    - kind: Service
      name: f5-demo-app-route-2
    - kind: Service
      name: f5-demo-app-route-3
