routes/route-7.yaml
  apiVersion: v1
  kind: Route
  metadata:
    labels:
      name: f5-demo-app-route
    name: route-7
    namespace: f5demo
  spec:
    host: mysite.f5demo.com
    to:
      kind: Service
      name: f5-demo-app-route
      weight: 20
    alternateBackends:
    - kind: Service
      name: f5-demo-app-route-2
      weight: 0
    - kind: Service
      name: f5-demo-app-route-3
      weight: 0
