routes/tls_term_passthrough_redirect.yaml
  apiVersion: v1
  kind: Route
  metadata:
    labels:
      name: f5-demo-app-route
    name: tls-termination-passthrough
    namespace: f5demo
  spec:
    host: mysite.f5demo.com
    tls:
      termination: passthrough
      insecureEdgeTerminationPolicy: Redirect
    to:
      kind: Service
      name: f5-demo-app-service-1
