routes/tls_termination_edge.yaml
  apiVersion: v1
  kind: Route
  metadata:
    labels:
      name: f5-demo-app-route
    name: tls-termination-edge
    namespace: f5demo
    annotations:
      virtual-server.f5.com/balance: least-connections-node
      virtual-server.f5.com/clientssl: /Common/client-ssl
  spec:
    host: mysite.f5demo.com
    path: "/"
    port:
      targetPort: 8080
    tls:
      termination: edge
    to:
      kind: Service
      name: f5-demo-app-route
